force-app/main/default/objects/AH_Resource_Planner_Overbooking__c/AH_Resource_Planner_Overbooking__c.object-meta.xml
<CustomObject>
    <description>Custom object that stores data parsed from the pse__Utilization Engine object.</description>
    <label>Resource Planner Overbooking</label>
    <nameField>
        <displayFormat>OVR-{000000}</displayFormat>
        <label>Resource Planner Overbooking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Planner Overbookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>