force-app/main/default/objects/AH_Resource_Planner_Overbooking__c/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <description>NICC-036706</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Intended to be used for reference notes for reason why approved was checked.</inlineHelpText>
    <label>Approval Comments</label>
    <type>TextArea</type>
</CustomField>