force-app/main/default/objects/AH_Resource_Planner_Overbooking__c/fields/Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Booked_Date__c</fullName>
    <description>NICC-036706</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The placeholder day for this user.</inlineHelpText>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>