force-app/main/default/objects/AH_Resource_Planner_Overbooking__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-036706</description>
    <inlineHelpText>Resource for this day</inlineHelpText>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Resource Planner Overbookings</relationshipLabel>
    <relationshipName>Resource_Planner_Overbookings</relationshipName>
    <type>Lookup</type>
</CustomField>