force-app/main/default/objects/AH_Resource_Planner_Overbooking__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>NICC-036706 - Used to prevent duplicates during large upserts</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for this record</inlineHelpText>
    <label>External ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>