force-app/main/default/objects/AH_Resource_Planner_Overbooking__c/fields/IsOverbooked__c.field-meta.xml
<CustomField>
    <fullName>IsOverbooked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-036706</description>
    <inlineHelpText>Denotes that this day for this Resource has hours blocked that exceed the hours allotted for this day.</inlineHelpText>
    <label>Overbooked</label>
    <type>Checkbox</type>
</CustomField>