force-app/main/default/objects/AH_Resource_Planner_Overbooking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Year__c</columns>
    <columns>Booked_Date__c</columns>
    <columns>IsOverbooked__c</columns>
    <columns>Work_Calendar_Hours__c</columns>
    <columns>Hours_Booked__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>External_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>