force-app/main/default/objects/AH_Resource_Planner_Overbooking__c/listViews/All_Future_Overbooked.listView-meta.xml
<ListView>
    <fullName>All_Future_Overbooked</fullName>
    <columns>NAME</columns>
    <columns>Resource_Manager__c</columns>
    <columns>Contact__c</columns>
    <columns>Booked_Date__c</columns>
    <columns>Hours_Booked__c</columns>
    <columns>Hours_Overbooked__c</columns>
    <columns>Approved__c</columns>
    <columns>Approval_Comments__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsOverbooked__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Booked_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>All Future Overbooked</label>
    <language>en_US</language>
</ListView>